# uplink-rust

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README  README.md  docker-compose.yaml
.github/workflows/: uplink-sys-cross-aarch64-linux.yml  uplink-sys.yml  uplink.yml
uplink/: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
uplink-sys/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
uplink-sys/.docs-rs/: README.md  libuplink.pc
uplink-sys/.docs-rs/uplink/: uplink.h
uplink-sys/examples/list_buckets/: Cargo.toml
uplink-sys/examples/list_buckets/src/: main.rs
uplink-sys/src/: lib.rs
uplink-sys/tests/: list_buckets.rs
uplink/src/: access.rs  bucket.rs  config.rs  docs.rs  edge.rs  encryption_key.rs  error.rs  helpers.rs  lib.rs  metadata.rs  object.rs  project.rs  uplink_c.rs
uplink/src/docs/: architecture.rs  design.rs  storj.rs
uplink/src/edge/: config.rs  credentials.rs  linksharing.rs
uplink/src/object/: upload.rs
uplink/src/project/: options.rs
uplink/tests/: access_grant_test.rs  bucket_test.rs  common.rs  docker-compose.yaml  edge_test.rs  full_cycle_test.rs  object_test.rs  uploads_test.rs
