[package]
name = "uplink-sys"
version = "0.1.1"
authors = ["Cameron Fyfe <cameron.j.fyfe@gmail.com>", "utropicmedia"]
edition = "2021"
links = "uplink"
description = "Unsafe rust bindings for libuplink - the storj protocol library."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/storj-thirdparty/uplink-rust"
keywords = ["storj", "storage"]

[build-dependencies]
bindgen = "0.59.1"

[dependencies]
