[package]
name = "uplink-sys"
version = "0.5.1"
authors = ["Cameron Fyfe <cameron.j.fyfe@gmail.com>", "utropicmedia"]
edition = "2021"
links = "uplink"
description = "Unsafe rust bindings for libuplink - the storj protocol library."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/storj-thirdparty/uplink-rust"
keywords = ["storj", "storage"]

# Contains relevant information of the Uplink c-binding.
[package.metadata.uplink-c]
version = "1.7.0" # keep it manually in sync with the git-submodule uplink-c checkout version tag.

[build-dependencies]
bindgen = "0.59.2"

[dependencies]
