[package]
name = "uplink"
version = "0.10.2"
authors = ["Ivan Fraixedes <ivan@fraixed.es>"]
edition = "2021"
description = "Idiomatic and safe Rust binding for the Storj Lib Uplink"
license = "MIT"
repository = "https://github.com/storj-thirdparty/uplink-rust"
keywords = ["storj", "storjlabs", "decentralized", "binding", "uplink"]
categories = ["api-bindings"]
homepage = "https://storj.io"


[dependencies]
uplink-sys = { path = "../uplink-sys", version = "0.7.2" }

[dev-dependencies]
rand = "0.8.5"
