[package]
name = "list_buckets"
version = "0.1.0"
authors = ["Cameron Fyfe <cameron.j.fyfe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uplink-sys = { version = "^0", path = "../../" }
chrono = "0.4.19"